--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
             <h2>Карта мира</h2>
             <hr class="divider">
             <div class="map-container">
-                <!-- Вставить интерактивную карту или изображение -->
+                <div class="map-container">
+                    <img src="images/japanese-map.jpg" alt="Карта мира" class="map-image">
+                <div class="map-markers">
+        <!-- Добавьте маркеры с анимацией -->
+    </div>
+                </div>
             </div>
         </section>
 
