--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For Honor - Самурайская сага</title>
+    <title>For Honor</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +25,7 @@
     </nav>
 
     <main id="content">
-        <!-- Динамическое содержимое -->
+        
     </main>
 
     <script src="script.js"></script>
