--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
         
         <div class="logo">
-            <a href="#home"><img src="logo.png" alt="For Honor"></a>
+            <a href="#home" id="home-link"><img src="logo.png" alt="For Honor"></a>
         </div>
 
         <ul class="nav-right">
