--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Война кланов расколола страну... [описание]</p>
             </div>
             <hr class="divider">
-            <img src="main-image.jpg" alt="Обложка" class="main-image">
+            <img src="fon.jpg" alt="Обложка" class="main-image">
             <hr class="divider">
             <div class="button-group">
                 <button class="samurai-btn">Читать онлайн</button>
