--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
 
     <main class="content-area">
-        <!-- Секции контента -->
+        <!-- Главная страница -->
         <section id="main" class="content-section active">
             <h1>Добро пожаловать</h1>
             <hr>
@@ -39,9 +39,69 @@
             </div>
         </section>
 
-        <!-- Остальные секции (аналогично) -->
+        <!-- Главы -->
+        <section id="chapters" class="content-section">
+            <h1>Оглавление</h1>
+            <hr>
+            <div class="chapter-card">Глава 1: Начало пути</div>
+            <div class="chapter-card">Глава 2: Тёмный лес</div>
+            <div class="chapter-card">Глава 3: Затерянный город</div>
+            <div class="chapter-card">Глава 4: Испытание огнём</div>
+            <div class="chapter-card">Глава 5: Финал путешествия</div>
+        </section>
+
+        <!-- Доп. материалы -->
+        <section id="materials" class="content-section">
+            <h1>Дополнительные материалы</h1>
+            <hr>
+            <div class="material-card">
+                <h3>Персонажи</h3>
+                <p>Описание главных героев</p>
+            </div>
+            <div class="material-card">
+                <h3>Локации</h3>
+                <p>Карты и описание мест</p>
+            </div>
+            <div class="material-card">
+                <h3>Артефакты</h3>
+                <p>Магические предметы вселенной</p>
+            </div>
+        </section>
+
+        <!-- Об авторе -->
+        <section id="author" class="content-section">
+            <h1>Об авторе</h1>
+            <hr>
+            <div class="author-info">
+                <h3>Имя Автора</h3>
+                <p>Биография и творческий путь</p>
+            </div>
+            <div class="book-info">
+                <h3>О книге</h3>
+                <p>История создания произведения</p>
+            </div>
+        </section>
+
+        <!-- Карта мира -->
+        <section id="map" class="content-section">
+            <h1>Карта мира</h1>
+            <hr>
+            <p>Описание географии вашего мира</p>
+            <div class="map-container">
+                <img src="map.jpg" alt="Карта мира" class="map-image">
+            </div>
+            <hr>
+            <div class="map-legend">
+                <h4>Легенда карты:</h4>
+                <ul>
+                    <li>★ - Важные города</li>
+                    <li>⚔ - Опасные зоны</li>
+                    <li>🌳 - Заповедные леса</li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
 </body>
-</html>
+                </html>
