--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
         <nav class="menu-nav">
             <!-- Вкладки слева от логотипа -->
             <div class="menu-left">
-                <button class="menu-tab" data-tab="map">Карта мира</button>
-                <button class="menu-tab" data-tab="history">История</button>
-            </div>
-            
-            <!-- Логотип по центру -->
-            <div class="menu-center">
-                <img src="logo.png" alt="Логотип" class="logo" id="home-tab">
-                <div class="book-title">Название книги</div>
-            </div>
-            
-            <!-- Вкладки справа от логотипа -->
-            <div class="menu-right">
-                <button class="menu-tab" data-tab="lore">Лор</button>
-                <button class="menu-tab" data-tab="author">Об авторе</button>
-            </div>
+    <button class="menu-tab" data-tab="map"><span>Карта мира</span></button>
+    <button class="menu-tab" data-tab="history"><span>История</span></button>
+</div>
+
+<div class="menu-center">
+    <img src="images/logo.png" alt="Логотип" class="logo" id="home-tab">
+    <div class="book-title">Название книги</div>
+</div>
+
+<div class="menu-right">
+    <button class="menu-tab" data-tab="lore"><span>Лор</span></button>
+    <button class="menu-tab" data-tab="author"><span>Об авторе</span></button>
+</div>
         </nav>
     </header>
 
