--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="menu-center">
-    <img src="images/logo.png" alt="Логотип" class="logo" id="home-tab">
+    <img src="logo.png" alt="Логотип" class="logo" id="home-tab">
     <div class="book-title">Название книги</div>
 </div>
 
